<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8sp"
        android:text="@string/fahrenheit_to_celcius"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="298dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_heading"
        app:srcCompat="@drawable/temp" />

    <EditText
        android:id="@+id/edit_far"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/enter_temp_in_f"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/btn_tocel"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_tocel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/to_celcius"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/edit_far"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_far"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_cel"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16sp"
        android:ems="10"
        android:hint="@string/entertemp_in_c"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/btn_tofar"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_far" />

    <Button
        android:id="@+id/btn_tofar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16sp"
        android:backgroundTint="@color/blue"
        android:text="@string/to_fahrenheit"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/edit_cel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_cel"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>